force-app/main/default/objects/custom_create25__c/custom_create25__c.object-meta.xml
<CustomObject>
    <label>Custom created object25</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects25</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>