force-app/main/default/objects/custom_create25__c/fields/custom_create_25field558__c.field-meta.xml
<CustomField>
    <fullName>custom_create_25field558__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 25field558</label>
    <type>Checkbox</type>
</CustomField>